Fix a bug with overflowing text on mobile

--- a/components/home/styles.scss
+++ b/components/home/styles.scss
@@ -189,7 +189,7 @@ $bg: #efefef;
 
 @media (max-width: 60rem) {
   .panel {
-    height: 31rem !important;
+    height: 33rem !important;
   }
 }
 
